--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -8,7 +8,7 @@
 body{
     overflow-x: hidden;
     min-height: 100vh;
-     background-color: rgb(255, 255, 255) ;
+    background-color: rgb(255, 255, 255) ;
 }
 
 
@@ -210,6 +210,8 @@ padding:12px;
     height: fit-content;
     background-color:white;
     padding-bottom: 50px;
+    overflow: hidden;
+
 }
 
 #resume-header{
@@ -575,7 +577,7 @@ background-image: linear-gradient(315deg, #63a4ff 0%, #83eaf1 74%);
 /* contact */
 #contact{
     background-color: #FFF;
-    height: 100vh;
+    height:fit-content;;
     overflow: hidden;
 }
 
@@ -784,10 +786,12 @@ body {
 
   /* media queries for project */
 
-  @media only screen and (max-width: 768px) {
+  @media only screen and (min-device-width: 481px) and (max-width: 768px) {
 
       #projects{
-        height:390vh;
+        height:fit-content;
+    overflow: hidden;
+
       }
 
       .card-body{
@@ -819,13 +823,14 @@ body {
       }
       .main-section-projects{
         display: block;
-        margin-left: 35px;
-        
+        margin-left: 32px;
       }
       .main-section-projects1{
         display: block;
-        margin-left: 35px;
+        margin-left: 3px;
         margin-bottom: 40px;
+        margin-left: 30px;
+
       }
   }
 
